<resources>
    <string name="app_name">GeoNews</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Hoy</string>
    <string name="tomorrow">Mañana</string>
    <string name="five_days">5 días</string>
    <string name="no_service">Esta ubicación no está suscrita a ningún servicio disponible.
        Pruebe a suscribirse a un servicio para consultar su información.</string>
    <string name="ajustes_de_servicios">Ajustes de servicios</string>
    <string name="more_info">+ Info</string>
    <string name="less_info">- Info</string>
    <string name="airvisual">Calidad del aire</string>
    <string name="openweather">Tiempo</string>
    <string name="currents">Noticias</string>
    <string name="new_info">Cargando nueva información...</string>
    <string name="export_input">Exportar</string>
    <string name="import_input">Importar</string>
</resources>